# gaply

./: .env.backup  .env.example  .gitignore  COMANDOS_RAPIDOS.md  ENDPOINTS_FILTROS.md  INSTALACION.md  README.md  RESUMEN_PROYECTO.md  docker-compose.local.yml  docker-compose.yml  gaply_key.pem  start.ps1
backend/: Dockerfile  arreglar_autoincrement.py  cargar_datos.py  cargar_datos_minimos.py  datos_ejemplo.sql  datos_minimos.sql  probar_datos_faltantes.py  probar_endpoint.py  probar_test_endpoint.py  requirements.txt  test_backend.ps1
backend/app/: database.py  llm_service.py  main.py  models.py
frontend/: .dockerignore  DOCKER.md  Dockerfile  docker-compose.yml  next.config.mjs
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/acerca/: page.tsx
frontend/app/api/solicitudes/: route.ts
frontend/app/buscar/: page.tsx
frontend/app/confirmacion/: page.tsx
frontend/app/dashboard-tecnico/: layout.tsx
frontend/app/dashboard-tecnico/experiencia/: page.tsx
frontend/app/dashboard-tecnico/perfil/: page.tsx
frontend/app/dashboard-tecnico/resenas/: page.tsx
frontend/app/dashboard-tecnico/solicitudes/: page.tsx
frontend/app/login-tecnico/: page.tsx
frontend/app/registro-tecnico/: loading.tsx  page.tsx
frontend/app/registro-tecnico/confirmacion/: page.tsx
frontend/app/resultados/: page.tsx
frontend/app/tecnico/[id]/: page.tsx
frontend/app/tecnicos/: page.tsx
frontend/components/: navigation.tsx  technician-navigation.tsx  technician-results.tsx
mcp_server/: README.md  SETUP_CLAUDE.md  pyproject.toml  server.py
